--- a/gerenciador_web/config/tarefas/templates/tarefas/detalhe.html
+++ b/gerenciador_web/config/tarefas/templates/tarefas/detalhe.html
@@ -9,9 +9,11 @@
 
 <body>
     <h1>{{tarefa.titulo}}</h1>
-    <p><strong>Descrção</strong>{{tarefa.descricao|linebreaks}}</p>
+    <p><strong>Descrição</strong>{{tarefa.descricao|linebreaks}}</p>
     </p>
     <small> Criada em:{{tarefa.data_descricao}}</small>
+    <hr>
+    <a href = "{% url 'listar_tarefas'%}">Voltar para Lista</a>
 
 </body>
 </html>
