--- a/gerenciador_web/config/tarefas/templates/tarefas/detalhe.html
+++ b/gerenciador_web/config/tarefas/templates/tarefas/detalhe.html
@@ -4,7 +4,7 @@
     {% load static %}
     <meta charset="UTF-8">
     <title>Detalhe: {{ tarefa.titulo }}</title>
-    <link rel="stylesheet" href="{ %static 'detalhe/detalhe.css'%}">
+    <link rel="stylesheet" href="{% static 'detalhe/detalhe.css' %}">
 </head>
 
 <body>
@@ -13,6 +13,7 @@
     </p>
     <small> Criada em:{{tarefa.data_descricao}}</small>
     <hr>
+    <a href = "{% url 'alterar_tarefa' tarefa.id %}"> Alterar Tarefa</a>| voltar para lista
     <a href = "{% url 'listar_tarefas'%}">Voltar para Lista</a>
 
 </body>
