--- a/gerenciador_web/config/tarefas/static/exclusao/exclusao.css
+++ b/gerenciador_web/config/tarefas/static/exclusao/exclusao.css
@@ -1,8 +1,7 @@
 body {
     font-family: 'Comic Sans MS', 'Poppins', cursive, sans-serif;
     background: #a266c8; 
-    margin-right: 300px;
-    margin-left: 300px;
+    margin: 300px;
 }
 
 
