--- a/gerenciador_web/config/tarefas/templates/tarefas/detalhe.html
+++ b/gerenciador_web/config/tarefas/templates/tarefas/detalhe.html
@@ -10,10 +10,11 @@
 <body>
     <h1>{{tarefa.titulo}}</h1>
     <p><strong>Descrição</strong>{{tarefa.descricao|linebreaks}}</p>
-    </p>
+    <p><strong>Status:</strong> {% if tarefa.concluida %}Concluida{% else %}Pendente{% endif %}</p>
     <small> Criada em:{{tarefa.data_descricao}}</small>
     <hr>
     <a href = "{% url 'alterar_tarefa' tarefa.id %}"> Alterar Tarefa</a>| voltar para lista
+    <a href = "{% url 'excluir_tarefa' tarefa.id %}">Excluir Tarefa </a>
     <a href = "{% url 'listar_tarefas'%}">Voltar para Lista</a>
 
 </body>
